--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -5,9 +5,8 @@
     <div class="sixteen wide column">
 
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <h4>เพิ่มเลขแบบพิมพ์</h4>
+            <span>เพิ่มเลขแบบพิมพ์</span>
         </div>
-
         <!-- form add print no -->
         <div class="ui bottom attached segment">
             <div class="ui centered grid">
@@ -42,7 +41,7 @@
                             </div>
                             <div class="three wide field {{f.submitted && f.controls.amount.invalid ? 'error' : ''}}">
                                 <div class="ui input">
-                                    <input type="text" name="amount" class="full-width" ngModel required>
+                                    <input type="number" name="amount" class="full-width" ngModel required>
                                 </div>
                             </div>
                             <div class="one wide field">
@@ -147,23 +146,22 @@
                                 <th>{{ round(totalReceipt.customAmount || 0.0) }}</th>
                                 <th>{{ round(totalReceipt.stampAmount || 0.0) }}</th>
                             </tr>
-
                         </tfoot>
                     </table>
                 </div>
                 <div class="sixteen wide center aligned column">
-                    <a class="ui mini button widtd-100" routerLink='/int01/1/1'>
-                        <i class="times left icon"></i>ยกเลิก
-                    </a>
                     <button class="ui mini primary button widtd-100" (click)="saveAll()">
                         <i class="save icon"></i>บันทึก
                     </button>
-                    <button class="ui mini primary button widtd-100">
-                        <i class="print icon"></i>ส่งออก
-                        <!-- export -->
-                    </button>
                     <a class="ui mini primary button widtd-100" routerLink='/int01/1/3'>
                         <i class="file alternate outline icon"></i>ตรวจสอบงบสรุปยอดภาษี
+                    </a>
+                    <!-- export -->
+                    <button class="ui mini yellow button widtd-100">
+                            <i class="print icon"></i>ส่งออก
+                        </button>
+                    <a class="ui mini button widtd-100" routerLink='/int01/1/1'>
+                        <i class="times left icon"></i>ยกเลิก
                     </a>
                 </div>
             </div>
