--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-1/int01-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-1/int01-2-1.component.html
@@ -6,40 +6,36 @@
       <span> ตรวจสอบใบอนุญาตสุรา ยาสูบ ไพ่</span>
     </div>
 
-    <div class="ui attached segment">
+    <div class="ui bottom attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="two wide field"></div>
-          <div class="two wide field">
-            <label class="text-right full-width">สรรพสามิตภาค</label>
+          <div class="three wide field">
+            <label class="text-right full-width">สำนักงานสรรพสามิตภาค</label>
           </div>
-          <div class="four wide field">
-            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)"
-              [(ngModel)]="code1">
-              <option value="00">เลือก</option>
+          <div class="five wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo1" (change)="travelTo2Dropdown($event)" [(ngModel)]="code1">
+              <option value="00">กรุณาเลือก</option>
               <option *ngFor="let data of travelTo1List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
 
           </div>
           <div class="two wide field">
-            <label class="text-right full-width">สรรพสามิตพื้นที่</label>
+            <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่</label>
           </div>
-          <div class="four wide field">
-            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)"
-              [(ngModel)]="code2">
-              <option value="00">เลือก</option>
+          <div class="five wide field">
+            <select class="ui dropdown search selection" style="width: 100%;" id="travelTo2" (change)="travelTo3Dropdown($event)" [(ngModel)]="code2">
+              <option value="00">กรุณาเลือก</option>
               <option *ngFor="let data of travelTo2List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field"></div>
-          <div class="two wide field">
-            <label class="text-right full-width">สรรพสามิตสาขา</label>
+          <div class="three wide field">
+            <label class="text-right full-width">สำนักงานสรรพสามิตพื้นที่สาขา</label>
           </div>
-          <div class="four wide field">
+          <div class="five wide field">
             <select class="ui dropdown search selection" style="width: 100%;" id="travelTo3" [(ngModel)]="code3">
-              <option value="00">เลือก</option>
+              <option value="00">กรุณาเลือก</option>
               <option *ngFor="let data of travelTo3List" value="{{data.lovId}}">{{data.subTypeDescription}}</option>
             </select>
           </div>
@@ -48,19 +44,21 @@
             </label>
           </div>
           <div class="two wide field">
-            <div class="ui calendar" id="calendar1" style="width:100%">
+            <div class="ui calendar full-width" id="calendar1" style="width:100%">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="text" name="startDate" id="startDate" readonly>
+                <input type="text" placeholder="วว/ดด/ปปปป" name="startDate" id="startDate" readonly>
               </div>
             </div>
           </div>
-          <label>ถึง</label>
+          <div class="one wide field">
+            <label class="text-center full-width">ถึง</label>
+          </div>
           <div class="two wide field">
-            <div class="ui calendar" id="calendar2" style="width:100%">
+            <div class="ui calendar full-width" id="calendar2" style="width:100%">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="text" name="endDate" id="endDate" readonly>
+                <input type="text" placeholder="วว/ดด/ปปปป" name="endDate" id="endDate" readonly>
               </div>
             </div>
           </div>
@@ -71,6 +69,10 @@
             <button class="ui mini primary button width-100" (click)="searchWs()">
               <i class="search icon"></i>
               ค้นหา
+            </button>
+            <button class="ui mini button" type="reset" (click)="reset()">
+              <i class="refresh icon"></i>
+              ล้างข้อมูล
             </button>
           </div>
         </div>
