--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
@@ -115,9 +115,9 @@
     <div class="ui attached segment">
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button" (click)="backPage()">
-            <i class="arrow left icon"></i>
-            ย้อนหลับ
+          <button class="ui mini button" (click)="backPage()">
+            <i class="close icon"></i>
+            ยกเลิก
           </button>
         </div>
       </div>
