--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-5/int08-1-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-5/int08-1-5.component.html
@@ -10,7 +10,6 @@
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ชื่อกระดาษทำการ</label>
           </div>
@@ -18,19 +17,15 @@
             <input type="text" placeholder="ชื่อกระดาษทำการ" maxlength="100" class="custom" name="riskHrdPaperName" id="riskHrdPaperName"
               [(ngModel)]="riskAssRiskWsHdr.riskHrdPaperName">
           </div>
+          <div class="one wide field required">
+              <label class="text-right full-width">ปีงบประมาณ</label>
+            </div>
+            <div class="two wide field ">
+                <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="riskAssRiskWsHdr.budgetYear"
+                  disabled="disabled">
+              </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field "></div>
-          <div class="two wide field required">
-            <label class="text-right full-width">ปีงบประมาณ</label>
-          </div>
-          <div class="four wide field ">
-            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="riskAssRiskWsHdr.budgetYear"
-              disabled="disabled">
-          </div>
-        </div>
-        <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ผู้จัดทำ : ชื่อ </label>
           </div>
@@ -42,27 +37,26 @@
               </select>
             </div>
           </div>
-          <div class="two wide field ">
+          <div class="three wide field ">
             <input type="text" placeholder="ชื่อผู้จัดทำ" class="custom" name="createUserName" id="createUserName"
               [(ngModel)]="riskAssRiskWsHdr.createUserName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">นามสกุล</label>
           </div>
-          <div class="two wide field ">
+          <div class="three wide field ">
             <input type="text" placeholder="นามสกุล" class="custom" name="createLastName" id="createLastName"
               [(ngModel)]="riskAssRiskWsHdr.createLastName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">ตำแหน่ง</label>
           </div>
-          <div class="two wide field ">
+          <div class="four wide field ">
             <input type="text" placeholder="ตำแหน่ง" class="custom" name="createPosition" id="createPosition"
               [(ngModel)]="riskAssRiskWsHdr.createPosition">
           </div>
         </div>
         <div class="inline fields">
-          <div class="two wide field "></div>
           <div class="two wide field required">
             <label class="text-right full-width">ผู้ตรวจ : ชื่อ </label>
           </div>
@@ -74,20 +68,20 @@
               </select>
             </div>
           </div>
-          <div class="two wide field ">
+          <div class="three wide field ">
             <input type="text" placeholder="ชื่อผู้ตรวจ" class="custom" name="checkUserName" id="checkUserName"
               [(ngModel)]="riskAssRiskWsHdr.checkUserName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">นามสกุล</label>
           </div>
-          <div class="two wide field ">
+          <div class="three wide field ">
             <input type="text" placeholder="นามสกุล" class="custom" name="checkLastName" id="checkLastName" [(ngModel)]="riskAssRiskWsHdr.checkLastName">
           </div>
           <div class="one wide field required">
             <label class="text-right full-width">ตำแหน่ง</label>
           </div>
-          <div class="two wide field ">
+          <div class="four wide field ">
             <input type="text" placeholder="ตำแหน่ง" class="custom" name="checkPosition" id="checkPosition" disabled
               [(ngModel)]="riskAssRiskWsHdr.checkPosition">
           </div>
@@ -109,7 +103,7 @@
       <table id="dataTable" class="ui small celled table " style="width: 100%;">
         <thead>
           <tr>
-            <th rowspan="2" style="text-align: center !important">ลำดับ</th>
+            <th rowspan="2" style="text-align: center !important">ลำดับที่</th>
             <th rowspan="2" style="text-align: center !important" class="four wide field ">โครงการตามยุทธศาสตร์</th>
             <th rowspan="2" style="text-align: center !important">หน่วยงาน</th>
             <th colspan="4" style="text-align: center !important">งบประมาณที่ใช้ตามแผนยุทธศาสตร์</th>
